Fixed alignment issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,7 @@ a {
 }
 
 .emaillink {
-  grid-column: 2/5;
+  grid-column: 1/6;
   grid-row: 4/5;
   width: fit-content;
   height: fit-content;
@@ -231,30 +231,6 @@ a {
 }
 
 .event .marker {
-  fill: #5386E4;
-  position: relative;
-  left: -20px;
-  top: 6px;
-}
-
-.event1 {
-  display: flex;
-  margin-bottom: 15px;
-}
-
-.event1 .marker {
-  fill: #5386E4;
-  position: relative;
-  left: -20px;
-  top: 6px;
-}
-
-.event2 {
-  display: flex;
-  margin-bottom: 70px;
-}
-
-.event2 .marker {
   fill: #5386E4;
   position: relative;
   left: -20px;
@@ -325,7 +301,7 @@ a {
 }
 
 .linkedinlink {
-  grid-column: 3/6;
+  grid-column: 1/8;
   grid-row: 5/6;
   width: fit-content;
   height: fit-content;
@@ -440,7 +416,7 @@ a {
 }
 
 .githublink {
-  grid-column: 4/5;
+  grid-column: 1/8;
   grid-row: 7/8;
   font-size: 20px;
   align-self: start;
